# lib/routes/location/v1/location.js
@@ -24,6 +24,8 @@ var errors = require('../../../errors');
 var logger = require('../../../logger');
 var deviceKeyUtils = require('../../../utils/deviceKey');
 var allowedDevicesUtils = require('../../../utils/allowedDevices');
+var requesterAuth = require('../../../utils/requesterAuth');
+var locationBroker = require('../../../websocket/locationBroker');
 
 var KEY_HISTORY = 'hist';
 var KEY_LAST = 'last';
@@ -180,40 +182,7 @@ function recordVisitorHistory(visitKey, visitValue) {
 }
 
 function validateRequestingDeviceKeyForGetLocation(requestConfig, callback) {
-    if (configuration.strictDeviceKeyCheck === false) {
-        return callback();
-    }
-
-    var requestingDeviceId = requestConfig.requestMiataruDeviceID();
-    var requestingDeviceKey = requestConfig.requestMiataruDeviceKey();
-
-    // Let existing RequestMiataruDeviceID validation path handle missing IDs.
-    if (!requestingDeviceId || requestingDeviceId === '') {
-        return callback();
-    }
-
-    deviceKeyUtils.getDeviceKey(requestingDeviceId, function(error, storedKey) {
-        if (error) {
-            return callback(error);
-        }
-
-        // If requesting device has no configured key, continue as before.
-        if (storedKey === null || storedKey === undefined) {
-            return callback();
-        }
-
-        deviceKeyUtils.validateDeviceKey(requestingDeviceId, requestingDeviceKey, function(validationError, isValid) {
-            if (validationError) {
-                return callback(validationError);
-            }
-
-            if (!isValid) {
-                return callback(new errors.ForbiddenError('RequestMiataruDeviceKey does not match (strictDeviceKeyCheck is enabled)'));
-            }
-
-            callback();
-        });
-    });
+    requesterAuth.validateRequestingDeviceKeyForGetLocation(requestConfig, callback);
 }
 
 function validateDeviceKeyWithRequirement(deviceId, providedDeviceKey, requireConfiguredKey, callback) {
@@ -412,6 +381,9 @@ function updateLocation(req, res, next) {
     var MIATARU = req.MIATARU;
     var requestConfig = MIATARU.config;
     var locations = MIATARU.locations;
+    var locationsToPublish = locations.map(function(loc) {
+        return loc.data();
+    });
 
     var chain = seq();
 
@@ -497,6 +469,9 @@ function updateLocation(req, res, next) {
     }
 
     chain
+        .seq(function() {
+            locationBroker.publishLocations(locationsToPublish, this);
+        })
         .seq(function() {
             var eyes = ['x', '!', '^', '°'];
             res.send((new models.ResponseUpdateLocation(eyes[parseInt(Math.random() * eyes.length, 10)])).data());
